--- a/frontend/src/components/NavBar/navBar.scss
+++ b/frontend/src/components/NavBar/navBar.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   align-items: center;
   max-height: 200px;
-  min-width: 100%;
+  min-width: 100vw;
   padding: 0;
 
   border-bottom: 3px solid white;
@@ -45,7 +45,7 @@
     flex-direction: column;
     height: 150px;
     gap: 15px;
-    width: 80%;
+    min-width: 50%;
 
     @media (max-width: 768px) {
       flex-direction: row;
@@ -55,7 +55,7 @@
       display: flex;
       align-items: center;
       flex-direction: row-reverse;
-      gap: 200px;
+      gap: 50px;
 
       .navbar__home-container {
         position: relative;
