--- a/frontend/src/pages/register/register.scss
+++ b/frontend/src/pages/register/register.scss
@@ -72,6 +72,7 @@ $fonte-principal: 'Poppins', sans-serif;
     margin-bottom: 2rem;
   }
 
+  
   .photo-upload {
     display: flex;
     flex-direction: column;
@@ -115,12 +116,18 @@ $fonte-principal: 'Poppins', sans-serif;
     }
 
     .file-button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 3rem;
       background-color: $cor-botao;
       color: $cor-fundo;
       border: none;
       border-radius: 25px;
-      padding: 0.8rem 2rem;
-      font-size: 16px;
+      width: 20%;
+      height: 50px;
+      text-decoration: none;
+      padding: 0;
       font-weight: bold;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
@@ -128,6 +135,24 @@ $fonte-principal: 'Poppins', sans-serif;
       &:hover {
         background-color: $cor-hover;
         color: $cor-texto;
+        transform: scale(110%);
+        text-decoration: underline;
+        text-decoration-color: white;
+      }
+
+      button {
+        background: none;
+        border: none;
+        color: inherit;
+        font-size: inherit;
+        font-weight: inherit;
+        cursor: inherit;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #08c;
       }
     }
 
