--- a/frontend/src/pages/vagas/searchvagas.scss
+++ b/frontend/src/pages/vagas/searchvagas.scss
@@ -8,6 +8,38 @@
     width: 100%;
     margin: 0 auto;
 
+    .navbar__search{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        width: 450px;
+        border-radius: 20px;
+  
+        @media (max-width:768px) {
+          width: 200px;
+        }
+  
+          .navbar__search-button{
+            height: 35px;
+            width: 25px;
+            border-radius: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: none;
+          }
+          .navbar__search-input{
+            color: black;
+            padding-left: 25px;
+            background: none;
+            width: 88%;
+            border-radius: 20px;
+            height: 35px;
+            border: none;
+          }
+      }
+      
     .vagas-list {
         display: flex;
         justify-content: center;
