--- a/frontend/src/components/NavBar/navBar.scss
+++ b/frontend/src/components/NavBar/navBar.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   align-items: center;
   max-height: 200px;
-  min-width: 100vw;
+  width: 100vw;
   padding: 0;
 
   border-bottom: 3px solid white;
@@ -292,7 +292,7 @@
   }
 
   .spacement {
-    width: 400px;
+    max-width: 400px;
     height: 150px;
     display: none;
 
