--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,11 +1,14 @@
 html {
+    min-width: 100vw;
     scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
 }
 
 body{
     padding: 0;
     margin: 0;
-    max-width: 100vw;
+    width: 100vw;
     min-height: 100vh;
     background-color: black;
     color: white;
@@ -18,12 +21,11 @@ body{
     }
 }
 
-#root{
-    max-width: 100%;
-}
-
 .main{
+    padding: 0;
+    margin: 0;
     min-height: 60vh;
+    width: 100%;
 
     @media (max-width: 400px) {
         max-width: 400px;
