--- a/frontend/src/layouts/carrossel-form/carrossel.scss
+++ b/frontend/src/layouts/carrossel-form/carrossel.scss
@@ -17,7 +17,7 @@ body {
       overflow: hidden;
       width: 100vw;
       max-width: 100vw;
-      position: relative;
+
     }
 
     .swiper-wrapper {
@@ -65,6 +65,7 @@ body {
       display: flex;
       align-items: center;
       justify-content: center;
+      z-index: 0;
 
       @media (max-width:768px) {
         font-size: 12px;
