--- a/frontend/src/pages/curriculo/curriculo.scss
+++ b/frontend/src/pages/curriculo/curriculo.scss
@@ -71,7 +71,28 @@
             p {
                 font-size: 18px;
                 font-family: 'Arial', sans-serif;
-                margin: 0 0 10px 0;
+                margin: 0;
+            }
+
+            .tooltip-box{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 20px;
+                left: 150px;
+                position: relative;
+                border: none;
+                border-radius: 15px;
+                height: 60px;
+                max-width: 500px;
+                cursor: default;
+                margin: 0;
+                background-color: #1f1e1e;
+
+                .close-btn{
+                    padding: 5px 5px 0px 20px;
+                    cursor: pointer;
+                }
             }
         }
 
@@ -96,21 +117,21 @@
             }
         }
 
-        .tooltip-box{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-            position: absolute;
-            top: 300px;
-            max-width: 500px;
-            cursor: default;
-            background-color: #1f1e1e;
-
-            .close-btn{
-                cursor: pointer;
-            }
-        }
+        
     }
 
+}
+
+@media (max-width: 1235px){
+    #main{
+        flex-direction: column;
+        .rules{
+            margin: 20px 0 30px 0;
+        }
+
+        .tooltip-box{
+
+            margin-top: 20px;
+        }
+    }
 }
